--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "node-sass": "^4.0.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "^4.5.12",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-router": "^4.1.2",
+    "@vue/cli-service": "^4.1.1",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.4.1",
-    "vue-cli-plugin-style-resources-loader": "~0.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "eslintConfig": {
     "root": true,
@@ -32,12 +34,15 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "@vue/airbnb"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/no-unused-components": "off",
+      "disable-next-line": "off"
+    }
   },
   "browserslist": [
     "> 1%",
